--- a/demo.html
+++ b/demo.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="vi">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phân Loại Rác Thải</title>
     <link rel="stylesheet" href="layout.css">
 </head>
-
 <body>
 
     <div class="container">
         <h1>Website Phân Loại Rác Thải</h1>
         <p>Hệ thống giúp phân loại rác tái chế và không tái chế.</p>
 
-        <!-- Khu vực Camera thu thập dữ liệu -->
+        <!-- Khu vực Camera -->
         <div id="camera-container">
-            <video id="video" autoplay></video>
+            <video id="video" autoplay playsinline></video>
             <button class="btn" onclick="captureImage()">Chụp ảnh</button>
             <canvas id="canvas" style="display:none;"></canvas>
         </div>
@@ -24,15 +22,15 @@
         <!-- Hoặc tải hình ảnh lên -->
         <div>
             <p>Hoặc chọn ảnh từ thiết bị:</p>
-            <input type="file" accept="image/*" id="upload" />
+            <input type="file" accept="image/*" id="upload">
         </div>
 
-        <!-- Kết quả do AI xử lý -->
+        <!-- Kết quả AI -->
         <div id="output">
             <p>Chỗ trả kết quả rác bằng văn bản</p>
         </div>
     </div>
+
     <script src="function.js"></script>
 </body>
-
 </html>
